@@ -9,8 +9,9 @@ V0.10.8
  * Corrected RTL for QToolBox (a bug in QCommonStyle).
  * Consider inactiveness in setting scrollbar background.
  * Fill header empty areas with the base color.
- * If a combo isn't styled by Kvantum, never change its delegate (otherwise, a rare crash will happen).
- * Fixed header icon position with RTL layouts.
+ * If a combo isn't styled by Kvantum anymore, don't restore its item delegate (otherwise, a rare crash might happen).
+ * Fixed the header icon position with RTL layouts.
+ * Merge the background of a header with that of its parent view, if any.
 
 V0.10.7
 ---------
